# New

./: .gitignore  README.md  README_CUDA_INSTALL.md  check_annotation_errors.py  check_categories.py  check_gpu_memory.py  colony_diagnosis_output.txt  compare_images.py  install_cuda_interactive.sh  mark.py  model.py  pyproject.toml  requirements.txt  tococo.py  utils.py
final/output/: detection_summary.json
model/train/: annotations.json
model/val/: annotations.json
nsamples/: 20251119_040045_Z22222DS3620.json  20251119_040326_Z22222DS3620.json  20251119_041011_Z22222DS3620.json  20251119_041313_Z22222DS3620.json  20251119_041623_Z22222DS3620.json  20251122_000207_Z22222DS3620.json  20251126_033906_Z22222DS3620.json  20251127_011351_Z22222DS3620.json  20251127_011735_Z22222DS3620.json  20251211_034319_Z22222DS3620.json  20251212_023744_Z22222DS3620.json  20251212_023951_Z22222DS3620.json  20251217_042446_Z22222DS3620.json  annotations.json
